feat: isDeleted mező bevezetés fix: frontend build + eslint+prettier
