# apps/frontend/resource/swagger.json
@@ -38,9 +38,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -67,9 +65,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -102,9 +98,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -147,9 +141,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -202,9 +194,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -240,9 +230,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -278,9 +266,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -330,9 +316,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -382,9 +366,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -418,9 +400,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -454,9 +434,7 @@
             }
           }
         },
-        "tags": [
-          "Courses"
-        ],
+        "tags": ["Courses"],
         "security": [
           {
             "bearer": []
@@ -473,9 +451,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Students"
-        ],
+        "tags": ["Students"],
         "security": [
           {
             "bearer": []
@@ -508,9 +484,7 @@
             }
           }
         },
-        "tags": [
-          "Students"
-        ],
+        "tags": ["Students"],
         "security": [
           {
             "bearer": []
@@ -543,9 +517,7 @@
             }
           }
         },
-        "tags": [
-          "Students"
-        ],
+        "tags": ["Students"],
         "security": [
           {
             "bearer": []
@@ -585,9 +557,7 @@
             }
           }
         },
-        "tags": [
-          "Students"
-        ],
+        "tags": ["Students"],
         "security": [
           {
             "bearer": []
@@ -621,9 +591,7 @@
             }
           }
         },
-        "tags": [
-          "Students"
-        ],
+        "tags": ["Students"],
         "security": [
           {
             "bearer": []
@@ -650,9 +618,7 @@
             }
           }
         },
-        "tags": [
-          "BillingAddressTypes"
-        ],
+        "tags": ["BillingAddressTypes"],
         "security": [
           {
             "bearer": []
@@ -679,9 +645,7 @@
             }
           }
         },
-        "tags": [
-          "Locations"
-        ],
+        "tags": ["Locations"],
         "security": [
           {
             "bearer": []
@@ -721,9 +685,7 @@
             }
           }
         },
-        "tags": [
-          "Locations"
-        ],
+        "tags": ["Locations"],
         "security": [
           {
             "bearer": []
@@ -750,9 +712,7 @@
             }
           }
         },
-        "tags": [
-          "Groups"
-        ],
+        "tags": ["Groups"],
         "security": [
           {
             "bearer": []
@@ -792,9 +752,7 @@
             }
           }
         },
-        "tags": [
-          "Groups"
-        ],
+        "tags": ["Groups"],
         "security": [
           {
             "bearer": []
@@ -827,9 +785,7 @@
             }
           }
         },
-        "tags": [
-          "Users"
-        ]
+        "tags": ["Users"]
       }
     },
     "/auth/register": {
@@ -851,9 +807,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Auth"
-        ]
+        "tags": ["Auth"]
       }
     },
     "/auth/login": {
@@ -875,9 +829,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Auth"
-        ]
+        "tags": ["Auth"]
       }
     },
     "/auth/refresh": {
@@ -889,9 +841,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Auth"
-        ]
+        "tags": ["Auth"]
       }
     },
     "/packages/GetPackages": {
@@ -913,9 +863,7 @@
             }
           }
         },
-        "tags": [
-          "Package"
-        ],
+        "tags": ["Package"],
         "security": [
           {
             "bearer": []
@@ -968,9 +916,7 @@
             }
           }
         },
-        "tags": [
-          "Package"
-        ],
+        "tags": ["Package"],
         "security": [
           {
             "bearer": []
@@ -1011,9 +957,7 @@
             }
           }
         },
-        "tags": [
-          "Package"
-        ],
+        "tags": ["Package"],
         "security": [
           {
             "bearer": []
@@ -1046,9 +990,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Package"
-        ],
+        "tags": ["Package"],
         "security": [
           {
             "bearer": []
@@ -1078,9 +1020,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Invoice"
-        ],
+        "tags": ["Invoice"],
         "security": [
           {
             "bearer": []
@@ -1297,11 +1237,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "description",
-          "date"
-        ]
+        "required": ["id", "description", "date"]
       },
       "InvoiceDateDto": {
         "type": "object",
@@ -1318,11 +1254,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "description",
-          "date"
-        ]
+        "required": ["id", "description", "date"]
       },
       "LessonDateInfoDto": {
         "type": "object",
@@ -1336,10 +1268,7 @@
             "nullable": true
           }
         },
-        "required": [
-          "date",
-          "description"
-        ]
+        "required": ["date", "description"]
       },
       "CreateLessonDateDto": {
         "type": "object",
@@ -1354,10 +1283,7 @@
             }
           }
         },
-        "required": [
-          "courseId",
-          "dateInfo"
-        ]
+        "required": ["courseId", "dateInfo"]
       },
       "InvoiceDateInfoDto": {
         "type": "object",
@@ -1371,10 +1297,7 @@
             "nullable": true
           }
         },
-        "required": [
-          "date",
-          "description"
-        ]
+        "required": ["date", "description"]
       },
       "CreateInvoiceDateDto": {
         "type": "object",
@@ -1389,10 +1312,7 @@
             }
           }
         },
-        "required": [
-          "courseId",
-          "dateInfo"
-        ]
+        "required": ["courseId", "dateInfo"]
       },
       "UpdateLessonDateDto": {
         "type": "object",
@@ -1409,11 +1329,7 @@
             "nullable": true
           }
         },
-        "required": [
-          "id",
-          "date",
-          "description"
-        ]
+        "required": ["id", "date", "description"]
       },
       "UpdateInvoiceDateDto": {
         "type": "object",
@@ -1430,11 +1346,7 @@
             "nullable": true
           }
         },
-        "required": [
-          "id",
-          "date",
-          "description"
-        ]
+        "required": ["id", "date", "description"]
       },
       "AttendanceDto": {
         "type": "object",
@@ -1453,11 +1365,7 @@
             "type": "boolean"
           }
         },
-        "required": [
-          "lessonDateId",
-          "date",
-          "attended"
-        ]
+        "required": ["lessonDateId", "date", "attended"]
       },
       "StudentDto": {
         "type": "object",
@@ -1591,10 +1499,7 @@
             }
           }
         },
-        "required": [
-          "courseId",
-          "students"
-        ]
+        "required": ["courseId", "students"]
       },
       "PaymentDto": {
         "type": "object",
@@ -1622,14 +1527,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "invoiceDateId",
-          "date",
-          "billerId",
-          "payed",
-          "amount",
-          "invoiceNumber"
-        ]
+        "required": ["invoiceDateId", "date", "billerId", "payed", "amount", "invoiceNumber"]
       },
       "StudentPaymentDto": {
         "type": "object",
@@ -1644,10 +1542,7 @@
             }
           }
         },
-        "required": [
-          "studentName",
-          "Payments"
-        ]
+        "required": ["studentName", "Payments"]
       },
       "PaymentsDto": {
         "type": "object",
@@ -1662,10 +1557,7 @@
             }
           }
         },
-        "required": [
-          "courseId",
-          "payments"
-        ]
+        "required": ["courseId", "payments"]
       },
       "UpdateStudentDetailsDTO": {
         "type": "object",
@@ -1880,10 +1772,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "description"
-        ]
+        "required": ["id", "description"]
       },
       "LocationDto": {
         "type": "object",
@@ -1893,12 +1782,12 @@
           },
           "description": {
             "type": "string"
+          },
+          "isDeleted": {
+            "type": "string"
           }
         },
-        "required": [
-          "id",
-          "description"
-        ]
+        "required": ["id", "description", "isDeleted"]
       },
       "UpdateLocationsInputDto": {
         "type": "object",
@@ -1907,14 +1796,14 @@
             "type": "number",
             "nullable": true
           },
+          "isDeleted": {
+            "type": "string"
+          },
           "description": {
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "description"
-        ]
+        "required": ["id", "isDeleted", "description"]
       },
       "GroupDto": {
         "type": "object",
@@ -1924,12 +1813,12 @@
           },
           "description": {
             "type": "string"
+          },
+          "isDeleted": {
+            "type": "string"
           }
         },
-        "required": [
-          "id",
-          "description"
-        ]
+        "required": ["id", "description", "isDeleted"]
       },
       "UpdateGroupsInputDto": {
         "type": "object",
@@ -1938,14 +1827,14 @@
             "type": "number",
             "nullable": true
           },
+          "isDeleted": {
+            "type": "string"
+          },
           "description": {
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "description"
-        ]
+        "required": ["id", "isDeleted", "description"]
       },
       "ProfileDto": {
         "type": "object",
@@ -1963,12 +1852,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "id",
-          "email",
-          "name",
-          "roleId"
-        ]
+        "required": ["id", "email", "name", "roleId"]
       },
       "CreateUserDto": {
         "type": "object",
@@ -1983,11 +1867,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "name",
-          "email",
-          "password"
-        ]
+        "required": ["name", "email", "password"]
       },
       "LoginDto": {
         "type": "object",
@@ -1999,10 +1879,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "username",
-          "password"
-        ]
+        "required": ["username", "password"]
       },
       "PackageDto": {
         "type": "object",
@@ -2035,17 +1912,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "type",
-          "id",
-          "packageId",
-          "price",
-          "locationId",
-          "locationDesc",
-          "active",
-          "groupId",
-          "groupDesc"
-        ]
+        "required": ["type", "id", "packageId", "price", "locationId", "locationDesc", "active", "groupId", "groupDesc"]
       },
       "CreatePackageDto": {
         "type": "object",
@@ -2069,14 +1936,7 @@
             "type": "number"
           }
         },
-        "required": [
-          "packageId",
-          "price",
-          "type",
-          "locationId",
-          "active",
-          "groupId"
-        ]
+        "required": ["packageId", "price", "type", "locationId", "active", "groupId"]
       },
       "CourseAssignDto": {
         "type": "object",
@@ -2088,10 +1948,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "courseId"
-        ]
+        "required": ["id", "courseId"]
       },
       "PackageAssignDto": {
         "type": "object",
@@ -2100,9 +1957,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "packageId"
-        ]
+        "required": ["packageId"]
       },
       "AssingDto": {
         "type": "object",
@@ -2114,10 +1969,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "courseId",
-          "packageId"
-        ]
+        "required": ["courseId", "packageId"]
       },
       "PackageCourseAssignDto": {
         "type": "object",
@@ -2141,11 +1993,7 @@
             }
           }
         },
-        "required": [
-          "courses",
-          "packages",
-          "assignments"
-        ]
+        "required": ["courses", "packages", "assignments"]
       },
       "AssignPackageToCourseDto": {
         "type": "object",
@@ -2160,11 +2008,7 @@
             "type": "boolean"
           }
         },
-        "required": [
-          "courseId",
-          "packageId",
-          "assign"
-        ]
+        "required": ["courseId", "packageId", "assign"]
       },
       "UpdatePaymentsDto": {
         "type": "object",
@@ -2188,14 +2032,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "studentId",
-          "invoiceDateId",
-          "billerId",
-          "payed",
-          "payedAmount",
-          "invoiceNumber"
-        ]
+        "required": ["studentId", "invoiceDateId", "billerId", "payed", "payedAmount", "invoiceNumber"]
       }
     }
   }
